# pex

./: BUGS.md  README.md  expenses.db  main.py  presets.json  pyproject.toml
pex/: db.py  format.py
pex/commands/: add.py  init.py  list.py  update.py
pex/expenses/: expenses.py
pex/expenses/commands/: add.py  init.py  list.py  movements.py  payment.py  total.py  update.py
pex/interest/: interest.py
pex/interest/commands/: credit_card.py  loan.py  mortgage.py
src/: db.py  util.py
src/expenses/: expenses.py
src/expenses/commands/: add.py  init.py  list.py  movements.py  payment.py  tags.py  total.py  update.py
src/interest/: interest.py
src/interest/commands/: amortized.py  credit_card.py  loan.py  mortgage.py
src/presets/: presets.py
tests/: conftest.py  test_credit_card.py  test_db.py  test_presets.py
